--- a/calculate_energy_cascade/testcase/calculate_energy_cascade.yml
+++ b/calculate_energy_cascade/testcase/calculate_energy_cascade.yml
@@ -9,13 +9,10 @@ varname_target:
   - probe4
   - probe5
   - probe6
-  - probe7
-  - probe8
 
 time_step: 1.e-5
 
-dirname_output: result_energy_spectrum
-filename_output: tecplot_history_probe.dat
+filename_output: tecplot_energy_cascade.dat
 
 # Flow field Scale
 flow_velocity: 367.225 # m/s
@@ -27,5 +24,5 @@ kolmogorov_constant: 1.8
 fft_step_start: 0
 fft_step_end: -1
 fft_kind_window: hanning
-fft_filename_output: tecplot_energy_spectrum.dat
+fft_filename_output: tecplot_fft.dat
 fft_header: 
